@@ -23,7 +23,7 @@ $(T)kyo.trm $(T)latex.trm $(T)linux.trm $(T)mac.trm $(T)metafont.trm \
 $(T)metapost.trm $(T)mgr.trm $(T)mif.trm $(T)multitos.trm $(T)next.trm \
 $(T)openstep.trm $(T)pbm.trm $(T)pc.trm $(T)pdf.trm $(T)pm.trm \
 $(T)post.trm $(T)pslatex.trm $(T)pstricks.trm $(T)qms.trm $(T)regis.trm \
-$(T)rgip.trm $(T)sun.trm $(T)svg.trm $(T)t410x.trm $(T)table.trm \
+$(T)rgip.trm $(T)sun.trm $(T)svg.trm $(T)t410x.trm \
 $(T)tek.trm $(T)texdraw.trm $(T)tgif.trm $(T)tkcanvas.trm $(T)tpic.trm \
 $(T)unixpc.trm $(T)unixplot.trm $(T)v384.trm $(T)vgagl.trm $(T)vws.trm \
 $(T)win.trm $(T)x11.trm $(T)xlib.trm
