@@ -31,6 +31,7 @@ News, changes and fixes since gnuplot version 4.0
 * CHANGE X-resource gnuplot*ctrlq:on requires <ctrl>q to kill plot window
 * CHANGE X-resource gnuplot*exportselection:off disables plot->clipboard export
 * CHANGE prefer use of offset keyword in 'set [xyz]label "foo" offset -1,-1'
+* CHANGE 'set table "outfile"; ...; unset table' replaces 'set term table'
 * FIXED setenv GNUTERM now works for png, jpeg, and gif drivers
 * FIXED PostScript output can be restricted to Level 1 compatible features
 * FIXED emf output is compatible with MSWin XP SP 2
